Adicionada sessão sobre skate

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -11,7 +11,7 @@
   <script src="./js/sessao.js"></script>
 
   <link rel="stylesheet" href="./css/estilo.css" />
-  <link rel="icon" href="./assets/icon/favicon2.ico" />
+  <link rel="icon" href="./assets/icon/logoSite.png">
   <link rel="preconnect" href="https://fonts.gstatic.com" />
 </head>
 
@@ -20,7 +20,7 @@
   <!--header inicio-->
   <div class="header">
     <div class="container">
-      <h1 class="titulo">AquaTech</h1>
+      <h1 class="titulo">YourTricks</h1>
       <ul class="navbar">
         <li>
           <a href="index.html">Inicial</a>
