--- a/public/dashboard/cards.html
+++ b/public/dashboard/cards.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="./../css/dashboards.css">
     <link rel="stylesheet" href="./../css/estilo.css" />
+    <link rel="icon" href="../assets/icon/logoSite.png">
 
     <script src="../js/sessao.js"></script>
     <script src="../js/alerta.js"></script>
@@ -51,6 +52,12 @@
             <div class="btn-nav-white">
                 <a href="./quiz.html">
                     <h3>Quiz</h3>
+                </a>
+            </div>
+
+            <div class="btn-nav-white">
+                <a href="./edicao-aviso.html">
+                    <h3>Sobre skate</h3>
                 </a>
             </div>
 
