--- a/public/login.html
+++ b/public/login.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>AquaTech | Login</title>
+    <title>YourTricks | Login</title>
 
     <script src="./js/sessao.js"></script>
 
     <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="icon" href="./assets/icon/favicon2.ico">
+    <link rel="icon" href="./assets/icon/logoSite.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
@@ -21,7 +21,7 @@
 
     <div class="header">
         <div class="container">
-            <h1 class="titulo">AquaTech</h1>
+            <h1 class="titulo">YourTricks</h1>
             <ul class="navbar">
                 <li>
                     <a href="index.html">Inicial</a>
@@ -49,11 +49,11 @@
                 <div class="formulario">
                     <div class="campo">
                         <span>E-mail:</span>
-                        <input id="email_input" type="text" placeholder="Login" value="leandro@gmail.com">
+                        <input id="email_input" type="text" placeholder="Login">
                     </div>
                     <div class="campo">
                         <span>Senha:</span>
-                        <input id="senha_input" type="password" placeholder="******" value="123">
+                        <input id="senha_input" type="password" placeholder="******">
                     </div>
                     <button class="botao" onclick="entrar()">Entrar</button>
                 </div>
@@ -134,7 +134,7 @@
                 });
 
             } else {
-
+                alert('Usuário não encontrado!');
                 console.log("Houve um erro ao tentar realizar o login!");
 
                 resposta.text().then(texto => {
