--- a/public/index.html
+++ b/public/index.html
@@ -50,14 +50,14 @@
           <div class="box">
             <img src="./assets/imgs/sobreNos/missao.png">
             <h4>Missão</h4>
-            <p>Incentivar o movimento do Skate no Brasil, incentivando cada vez mais furar a bolha do mundo do skate e 
-              assim atrair mais pessoas para o movimente</p>
+            <p>Incentivar o movimento do Skate no Brasil, buscandp cada vez mais furar a bolha do mundo do skate e 
+              assim atrair mais pessoas para o movimento</p>
           </div>
           <div class="box">
-            <img src="assets/imgs/lightbulb_color.png">
+            <img src="assets/imgs/binoculos.png">
             <h4>Visão</h4>
             <p>Acredito que o skate mudou e pode mudar a vida de muitas pessoas, conseguindo ser utilizado como uma distração
-              e momento de lazer</p>
+              e momento de lazer e saúde</p>
           </div>
           <div class="box">
             <img src="assets/imgs/sobreNos/valores.png">
