--- a/public/login.html
+++ b/public/login.html
@@ -91,7 +91,7 @@
 
         if (emailVar == "" || senhaVar == "") {
             cardErro.style.display = "block"
-            mensagem_erro.innerHTML = "(Mensagem de erro para todos os campos em branco)";
+            mensagem_erro.innerHTML = "Preencha todos os campos!";
             // finalizarAguardar();
             return false;
         }
