--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
             <a href="#">Inicial</a>
           </li>
           <li>
-            <a onclick="valid()">Quiz</a>
+            <a onclick="valid()" style="cursor: pointer;">Quiz</a>
           </li>
           <li>|</li>
           <li>
