--- a/public/dashboard/cards.html
+++ b/public/dashboard/cards.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 
 <head>
-    <!-- <link rel="shortcut icon" href="../assets/icon/favicon2.ico" type="image/x-icon"> -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +20,7 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body onload="showUser()">
 
     <div class="janela">
 
@@ -30,7 +29,7 @@
             <h1>YourTricks</h1>
 
             <div class="hello">
-                <h3>Olá, <span id="b_usuario">usuário</span>!</h3>
+                <h3>Olá, <span id="b_usuario"></span>!</h3>
             </div>
 
             <div class="btn-nav" onclick="exibUser()">
@@ -100,6 +99,10 @@
 </body>
 
 <script>
+    function showUser(){
+        b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
+    }
+
     document.addEventListener("DOMContentLoaded", ()=>{
         var cardUser = document.querySelector('.cardUser');
         cardUser.style.display = 'none';
