Ajuste de Header e criação de miniGame skate

--- a/public/dashboard/edicao-aviso.html
+++ b/public/dashboard/edicao-aviso.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
 </head>
 
-<body style="background-color: #161618;">
+<body onload="showUser()" style="background-color: #161618;">
     <!-- <body onload="validarSessao()"> -->
 
     <div class="janela">
@@ -36,36 +36,42 @@
 
             <div class="btn-nav-white">
                 <a href="cards.html">
-                    <h3>Seus dados</h3>
+                    <h4>Seus dados</h4>
+                </a>
+            </div>
+
+            <div class="btn-nav-white" onclick="exibUser()">
+                <a href="./miniGame.html">
+                    <h4>Game</h4>
                 </a>
             </div>
 
             <div class="btn-nav-white">
                 <a href="./dashboard.html">
-                    <h3>Histórico</h3>
+                    <h4>Histórico</h4>
                 </a>
             </div>
 
             <div class="btn-nav-white">
                 <a href="./mural.html">
-                    <h3>Suas manobras</h3>
+                    <h4>Suas manobras</h4>
                 </a>
             </div>
 
             <div class="btn-nav-white">
                 <a href="./quiz.html">
-                    <h3>Quiz</h3>
+                    <h4>Quiz</h4>
                 </a>
             </div>
 
             <div class="btn-nav">
                 <a href="./edicao-aviso.html">
-                    <h3>Sobre skate</h3>
+                    <h4>Sobre skate</h4>
                 </a>
             </div>
 
             <div class="btn-logout" onclick="limparSessao()">
-                <h3>Sair</h3>
+                <h4>Sair</h4>
             </div>
 
         </div>
@@ -131,8 +137,8 @@
 </html>
 
 <script>
-    function listarInfosDeUm() {
-        console.log("Criar função de trazer informações de post escolhido");
+    function showUser(){
+        b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
     }
 
     function editar() {
