--- a/public/dashboard/mural.html
+++ b/public/dashboard/mural.html
@@ -35,34 +35,40 @@
 
             <div class="btn-nav-white">
                 <a href="cards.html">
-                    <h3>Seus dados</h3>
+                    <h4>Seus dados</h4>
+                </a>
+            </div>
+
+            <div class="btn-nav-white" onclick="exibUser()">
+                <a href="./miniGame.html">
+                    <h4>Game</h4>
                 </a>
             </div>
 
             <div class="btn-nav-white">
                 <a href="./dashboard.html">
-                    <h3>Histórico</h3>
+                    <h4>Histórico</h4>
                 </a>
             </div>
 
             <div class="btn-nav">
-                <h3>Suas manobras</h3>
+                <h4>Suas manobras</h4>
             </div>
 
             <div class="btn-nav-white">
                 <a href="./quiz.html">
-                    <h3>Quiz</h3>
+                    <h4>Quiz</h4>
                 </a>
             </div>
 
             <div class="btn-nav-white">
                 <a href="./edicao-aviso.html">
-                    <h3>Sobre skate</h3>
+                    <h4>Sobre skate</h4>
                 </a>
             </div>
 
             <div class="btn-logout" onclick="limparSessao()">
-                <h3>Sair</h3>
+                <h4>Sair</h4>
             </div>
 
         </div>
