--- a/public/dashboard/edicao-aviso.html
+++ b/public/dashboard/edicao-aviso.html
@@ -48,7 +48,7 @@
 
             <div class="btn-nav-white">
                 <a href="./dashboard.html">
-                    <h4>Histórico</h4>
+                    <h4>Estatísticas</h4>
                 </a>
             </div>
 
