--- a/public/dashboard/miniGame.html
+++ b/public/dashboard/miniGame.html
@@ -45,7 +45,7 @@
 
             <div class="btn-nav-white">
                 <a href="./dashboard.html">
-                    <h4>Histórico</h4>
+                    <h4>Estatísticas</h4>
                 </a>
             </div>
 
