Atualização de menu lateral

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -83,8 +83,8 @@
                 <!-- Menu lateral para navegação entre os gráficos 24/06/2024 -->
                 <div class="menuGrafico">
                     <h2>Selecione um gráfico</h2>
-                    <button>Gráfico 1</button>
-                    <button>Gráfico 2</button>
+                    <button style="margin-top: 30px;">Quiz</button>
+                    <button>YourTricks Game</button>
                     <button>Gráfico 3</button>
                     <button>Gráfico 4</button>
                 </div>
