--- a/public/dashboard/dashGame.html
+++ b/public/dashboard/dashGame.html
@@ -111,14 +111,11 @@
                 clearTimeout(proximaAtualizacao);
             }
 
-            fetch(`/quiz/obterDados`, {
-                method: "post",
+            fetch(`/game/buscar/${idUser}`, {
+                method: "GET",
                 headers: {
                     "Content-Type": "application/json"
-                },
-                body: JSON.stringify({
-                    idUsuario: idUser
-                })
+                }
             }).then(function (response) {
                 console.log(response)
                 if (response.status == 200) {
@@ -127,8 +124,8 @@
                         plotarGrafico(resposta.data);
                     });
                 } else if (response.status == 204) {
-                    alert("Você ainda não realizou uma tentativa no quiz!")
-                    setTimeout(() => { window.location.href = './quiz.html' }, 2000);
+                    alert("Você ainda não realizou uma tentativa no game!")
+                    setTimeout(() => { window.location.href = './miniGame.html' }, 2000);
                 } else {
                     console.error('Nenhum dado encontrado ou erro na API');
                 }
@@ -149,7 +146,7 @@
             // Criando estrutura para plotar gráfico - labels e dados
             // Rótulo que sera inserido no gráfico, no caso indíce da tentativa + 1;
             const labels = dadosRecebidos.map((registro, index) => `Tentativa:${index + 1}`);
-            const dataPoints = dadosRecebidos.map(registro => registro.pontuation);
+            const dataPoints = dadosRecebidos.map(registro => registro.pontuacao);
 
             console.log('----------------------------------------------');
             console.log('Dados recebidos:');
