elementos para switch de gráficos

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -93,7 +93,7 @@
                 <div id="grafico1" class="display-block">
                     <canvas id="myChartCanvas1"></canvas>
                     <div class="label-captura">
-                        <p id="avisoCaptura1" style="color: aliceblue;"></p>
+                    Tipo de gráfico: <button>Linha</button><button>Barra</button>
                     </div>
                 </div>
             </div>
@@ -177,7 +177,7 @@
 
             // Configuração do gráfico
             const config = {
-                type: 'line',
+                type: 'bar',
                 data: dados,
                 options: {
                     scales: {
